# audio_synthesizer

./: .gitignore  Cargo.toml  kbd.c  table.txt
src/: atomic_float.rs  main.rs
