[package]
name = "audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
anyhow = "1.0.56"
clap = "3.1.6"
termios = "0.3.3"
# nix = "0.23.1"
libc = "0.2.121"
crossbeam = {version= "0.8.1"}